--- a/snake.css
+++ b/snake.css
@@ -9,6 +9,6 @@ canvas {
 		left: 0;
 	}
 body {
-    background-image: url(/images/bg2.jpg);
+    background-image: url(/images/bg-simple.jpg);
 }
 
