--- a/default.css
+++ b/default.css
@@ -1,4 +1,6 @@
 body {
     font-family:'Times New Roman';
     font-size:x-large;
+    text-align:center;
+    background-image:url(/images/background.jpg);
 }
